<resources>
    <string name="app_name">Boring Weather</string>

    <string name="details_current">Current</string>
    <string name="details_humidity">Humidity</string>
    <string name="details_visibility">Visibility</string>
    <string name="details_uv_index">UV index</string>
    <string name="details_wind_speed">Wind speed</string>
    <string name="details_pressure">Pressure</string>
    <string name="details_current_details">Current details</string>
    <string name="details_cloud">Cloud</string>

    <string name="title_current">Current</string>
    <string name="title_powered">powered</string>
    <string name="title_today">Today</string>
    <string name="title_forecast">Forecast</string>
    <string name="title_detail">Detail</string>
    <string name="title_search">Search</string>
    <string name="title_search_city">Search city</string>
    <string name="title_search_text_background_first_time">First, let find a city</string>
    <string name="title_search_text_background">You can use \'?\' to find city with country code - e.g., VN?your_city</string>
    <string name="title_search_use_device_location">use device\'s location</string>
    <string name="title_search_clear">clear</string>
    <string name="title_search_available_cities">Available cities</string>
    <string name="title_search_location_dialog">Access location</string>
    <string name="format_msg_search_location_dialog_location_require">The app needs %s permission(s) to perform this action</string>
    <string name="msg_search_location_dialog_location_off">Location is off</string>

    <string name="title_holder_percent">-- %</string>
    <string name="title_holder_decimal_number">--</string>
    <string name="title_holder_float_number">--.-</string>
    <string name="title_holder_pressure">----nPa</string>
    <string name="title_holder_temperature">--</string>
    <string name="title_holder_time">--:-- am</string>
    <string name="title_holder_description">Description</string>
    <string name="title_holder_date_time">July, —,—:— AM</string>
    <string name="title_holder_title_collapsing_toolbar">Boring Weather</string>

    <string name="action_history">History</string>
    <string name="action_go_to_settings">Go to location settings</string>

    <string name="menu_current">Current</string>
    <string name="menu_today">Today</string>
    <string name="menu_forecast">Forecast</string>
    <string name="menu_history">History</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_settings">Settings</string>

    <string name="format_temperature_international">%1$.1f °K</string>
    <string name="format_temperature_metric">%1$.1f °C</string>
    <string name="format_temperature_imperial">%1$.1f °F</string>

    <string name="format_percent_decimal">%1$3d %%</string>

    <string name="format_visibility_international">%1$.1f km</string>
    <string name="format_visibility_metric">%1$.1f km</string>
    <string name="format_visibility_imperial">%1$.1f miles</string>

    <string name="format_speed_international">%1$.1f m/s</string>
    <string name="format_speed_metric">%1$.1f m/s</string>
    <string name="format_speed_imperial">%1$.1f mph</string>

    <string name="format_pressure">%1$.1f kPa</string>

    <string name="error_refresh_result_null">No result returned</string>
    <string name="error_refresh_task_pending">Refresh task is pending</string>
    <string name="error_refresh_task_running">Refresh task is running</string>
    <string name="error_refresh_task_canceled">Refresh task has cancelled</string>
    <string name="error_refresh_city_null">Loading city failed</string>
    <string name="error_refresh_city_not_outdated">Nope! Your data is recent</string>
    <string name="error_refresh_city_spamming">Hold on. Are you spamming?😤</string>
    <string name="error_refresh_failed">Failed to refresh weather data</string>
    <string name="error_unknown">Unknown error has occurred!</string>
    <string name="error_search_result_error">Searching failed</string>
    <string name="error_search_need_select_city">You need to select a city</string>
    <string name="error_search_fetched_cities">Getting fetched cities failed</string>
    <string name="error_search_location_permission_denied">Location is not granted</string>
    <string name="error_search_location_null">Failed to receive device\'s location</string>
    <string name="error_show_detail_weather">Failed to show detail weather</string>
    <string name="error_network_no_connection">You are currently offline, please check your connection</string>
    <string name="error_network_lost">Internet connection has lost!</string>
    <string name="error_feature_not_implemented">This feature is still being in development</string>
    <string name="msg_weather_icon">Weather Icon</string>
    <string name="msg_expand">Expand</string>

    <string name="notify_prepopulate_channel_id">prepopulateChannel</string>
    <string name="notify_prepopulate_channel_name">Setup app</string>
    <string name="notify_prepopulate_channel_description">Download files and prepopulate database</string>
    <string name="notify_prepopulate_title">Setting up app</string>

    <string name="url_prepopulate_city_table_sql">https://raw.githubusercontent.com/nogogold1998/Boring-Weather/sql/cities_table.sql</string>
    <string name="url_plash_weather_icon_gif">https://cdn.dribbble.com/users/372537/screenshots/2065624/icons_km_weather.gif</string>
    <string name="url_open_weather_api">https://openweathermap.org/api</string>
    <string name="url_open_weather_icon">https://openweathermap.org/themes/openweathermap/assets/img/logo_white_cropped.png</string>
    <string name="format_url_weather_icon">http://openweathermap.org/img/wn/%1$s@2x.png</string>
    <string name="pref_file_key">com.sunasterisk.borringweather.PREFERENCE_SETTINGS</string>
    <string name="pref_value_is_first_launch_default">true</string>
    <string name="pref_key_is_first_launch">_is_first_launch</string>
    <string name="pref_key_selected_city_id">selected_city_id</string>
    <string name="pref_key_last_searched_city">pk_last_searched_city</string>

    <!--Settings-->
    <string name="title_settings">Settings</string>
    <string name="title_setting_category_general">General</string>
    <string name="title_setting_category_more">More</string>
    <string name="title_setting_entry_unit">Unit system</string>
    <string name="title_setting_category_notification">Notifications</string>
    <string name="title_setting_notification_entry">@string/title_setting_category_notification</string>
    <string name="title_setting_frequency_entry">Frequency</string>
    <string name="title_setting_category_background">Background</string>
    <string name="title_setting_background_refresh_entry">Background refresh</string>

    <string name="title_international">International</string>
    <string name="title_metric">Metric</string>
    <string name="title_imperial">Imperial</string>

    <string name="pref_key_setting_unit_system">setting_unit_system</string>
    <string name="pref_value_setting_unit_system_international">international</string>
    <string name="pref_value_setting_unit_system_metric">metric</string>
    <string name="pref_value_setting_unit_system_imperial">imperial</string>
    <string name="pref_value_setting_unit_system_default">@string/pref_value_setting_unit_system_international</string>

    <string name="pref_key_setting_notification">setting_notification</string>
    <string name="pref_key_setting_notification_frequency">setting_notification_frequency</string>
    <string name="pref_value_setting_notification_frequency_default">@string/pref_value_setting_frequency_1hour</string>

    <string name="pref_key_setting_background_refresh">setting_background_refresh</string>
    <string name="pref_key_setting_background_refresh_frequency">setting_background_refresh_frequency</string>
    <string name="pref_value_setting_background_refresh_frequency_default">@string/pref_value_setting_frequency_1hour</string>

    <string name="pref_value_setting_frequency_1hour">1hour</string>
    <string name="pref_value_setting_frequency_3hours">3hours</string>
    <string name="pref_value_setting_frequency_6hours">6hours</string>
    <string name="pref_value_setting_frequency_12hours">12hours</string>
    <string name="pref_value_setting_frequency_1day">1day</string>

    <string name="title_1hour">Hourly</string>
    <string name="title_3hours">3 hours</string>
    <string name="title_6hours">6 hours</string>
    <string name="title_12hours">12 hours</string>
    <string name="title_1day">Daily</string>

    <string name="title_setting_search_limit_summary">Maximum number of cities result</string>
    <string name="title_setting_search_limit">Search limit</string>
    <string name="title_setting_info">Powered by OpenWeather</string>
    <string name="pref_key_setting_search_limit">setting_search_limit</string>
    <string name="pref_value_setting_search_limit_default">50</string>
    <string name="pref_key_setting_info">setting_info</string>
    <string name="title_splash_status_setup">Getting things ready…</string>
    <string name="title_splash_status_ready">Here you go..</string>
    <string name="title_splash_status_welcome_back">Welcome back</string>
</resources>
