<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_setting_category_general">

        <ListPreference
            app:defaultValue="@string/pref_value_setting_unit_system_default"
            app:entries="@array/unit_system_entries"
            app:entryValues="@array/unit_system_values"
            app:icon="@drawable/ic_round_ruler_30"
            app:key="@string/pref_key_setting_unit_system"
            app:title="@string/title_setting_entry_unit"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:max="500"
            app:defaultValue="@string/pref_value_setting_search_limit_default"
            app:icon="@drawable/ic_round_search_24"
            app:key="@string/pref_key_setting_search_limit"
            app:min="5"
            app:showSeekBarValue="true"
            app:summary="@string/title_setting_search_limit_summary"
            app:title="@string/title_setting_search_limit" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_setting_category_notification">

        <SwitchPreference
            app:defaultValue="false"
            app:enabled="false"
            app:icon="@drawable/ic_round_notifications_24"
            app:key="@string/pref_key_setting_notification"
            app:title="@string/title_setting_notification_entry" />

        <DropDownPreference
            app:defaultValue="@string/pref_value_setting_notification_frequency_default"
            app:dependency="@string/pref_key_setting_notification"
            app:entries="@array/frequency_entries"
            app:entryValues="@array/frequency_values"
            app:title="@string/title_setting_frequency_entry"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_setting_category_background">
        <SwitchPreference
            app:defaultValue="false"
            app:enabled="false"
            app:icon="@drawable/ic_round_refresh_24"
            app:key="@string/pref_key_setting_background_refresh"
            app:title="@string/title_setting_background_refresh_entry" />

        <DropDownPreference
            app:defaultValue="@string/pref_value_setting_notification_frequency_default"
            app:dependency="@string/pref_key_setting_background_refresh"
            app:entries="@array/frequency_entries"
            app:entryValues="@array/frequency_values"
            app:key="@string/pref_key_setting_background_refresh_frequency"
            app:title="@string/title_setting_frequency_entry"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_setting_category_more">
        <Preference
            app:icon="@drawable/ic_round_info_24"
            app:key="@string/pref_key_setting_info"
            app:title="@string/title_setting_info">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_open_weather_api" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
