<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_item_round_ripple"
    android:padding="@dimen/widget_margin"
    tools:layout_height="@dimen/dp_120">

    <TextView
        android:id="@+id/text_widget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:contentDescription="@string/app_name"
        android:text="@string/app_name"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/text_widget_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_widget_description"
        android:layout_alignStart="@id/text_widget_title"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_35"
        tools:text="@string/title_holder_temperature" />

    <TextView
        android:id="@+id/text_widget_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_widget_description"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dp_8"
        tools:text="@string/title_holder_time" />

    <TextView
        android:id="@+id/text_widget_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_widget_title"
        android:layout_alignStart="@+id/text_widget_title"
        android:layout_marginTop="@dimen/dp_4"
        tools:text="@string/title_holder_description" />

    <TextView
        android:id="@+id/text_widget_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_widget_time"
        android:layout_alignBottom="@+id/text_widget_temperature"
        android:textSize="@dimen/sp_20"
        tools:text="@string/title_holder_temperature" />
</RelativeLayout>
