<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/currentFragment">

    <fragment
        android:id="@+id/currentFragment"
        android:name="com.sunasterisk.boringweather.ui.current.CurrentFragment"
        android:label="@string/title_current"
        tools:layout="@layout/fragment_current">
        <action
            android:id="@+id/action_current_to_settings"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_current_to_search"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_current_to_detail"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.sunasterisk.boringweather.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="cityId"
            app:argType="integer" />
        <argument
            android:name="dailyWeatherDateTime"
            app:argType="long" />
        <argument
            android:name="forcusHourlyWeatherDt"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.sunasterisk.boringweather.ui.setting.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.sunasterisk.boringweather.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_placeholder"
            app:destination="@id/searchLocationFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchLocationFragment"
        android:label="SearchLocationFragment" />
</navigation>
